# build_bespoke

./: .gitignore  AGENTS.md  Dockerfile.bespoke  Makefile  README.md  bespokerun  build_bespoke.sh  runbespoke  setup_symlink.sh
.devcontainer/: devcontainer.json  podman-rootless
docs/prompts/: fix_chorder_diatonic_sticks__and_add_console_help_command.prompt.md  mLastFileChooserPath_and_TestRunner.prompt.md  parsebsk_and.prompt.md
tests/: CMakeLists.txt  JuceLibraryCode.cpp  SavestatePathTest.cpp  TestRunner.cpp  TestTestRunner.cpp
